# OOP_Concepts

./: .gitignore  .project  CMakeLists.txt
Data_Structures/: 5_stack_array.cpp  CMakeLists.txt
Data_Structures/Tut1_linked_list/: 1_linked_list.cpp  CMakeLists.txt  README.md
Data_Structures/Tut2_linked_list_circular/: 2_linked_list_circular.cpp  CMakeLists.txt  README.md
Data_Structures/Tut3_stack/: 3_stack.cpp  CMakeLists.txt  README.md
Data_Structures/Tut4_qeue/: 4_qeue.cpp  CMakeLists.txt  README.md
Data_Structures/Tut5_stack_array/: 5_stack_array.cpp  CMakeLists.txt  README.md
Data_Structures/Tut6_tree/: CMakeLists.txt  README.md  Tut6_tree.cpp
SLL_Menu/: .cproject  .project  Menu.cpp  Menu.h  conio2.h  main.cpp  singleLinkedList.h
SLL_Qeue_Menu/: .project  Menu.cpp  Menu.h  Qeue.cpp  Qeue.h  main.cpp  singleLinkedList.cpp  singleLinkedList.h
SLL_Stack_Menu/: .project  Menu.cpp  Menu.h  Stack.cpp  Stack.h  main.cpp  singleLinkedList.cpp
SingleLinkedList_HighlightedMenu/: .cproject  .project  Menu.cpp  Menu.h  Sll.cpp  Sll.h  common.h  main.cpp
Tut10_Overloading Stream Insertion and Stream/: .cproject  .project  CMakeLists.txt  PhoneNumber.cpp  PhoneNumber.h  README.md  main.cpp
Tut11_ArrayCalss_overloaded/: .cproject  .project  Array.cpp  Array.h  CMakeLists.txt  README.md  main.cpp
Tut12_ math_overload/: .cproject  .project  CMakeLists.txt  README.md  TimeBase.cpp  TimeBase.h  main.cpp
Tut13_Inheritance_Version1_Using protected data/: .project  CMakeLists.txt  CommissionEmployee.h  README.md  main.cpp
Tut14_Inheritance_Version2_Using private data/: .project  BasePlus.cpp  CMakeLists.txt  README.md  main.cpp
Tut15_Invoking Base-Class Functions from Derived-Class Objects/: .project  CMakeLists.txt  CommissionEmployee.cpp  README.md  main.cpp
Tut16_Derived-Class Member-Function Calls via Base-Class Pointers/: .project  BasePlus.h  CMakeLists.txt  README.md  main.cpp
Tut17_VirtualFunction/: .cproject  .project  BasePlus.cpp  CMakeLists.txt  CommissionEmployee.cpp  HourlyEmployee.cpp  HourlyEmployee.h  README.md  main.cpp
Tut18_PureVirtualFunction/: .project  BasePlus.h  CMakeLists.txt  README.md  build.py  employee.h  main.cpp
Tut19_StackTemplate/: .cproject  .project  CMakeLists.txt  README.md  Stack.h  main.cpp
Tut1_pointers and refParamters/: .cproject  .project  CMakeLists.txt  README.md  TimeBase.cpp  TimeBase.h  main.cpp
Tut1_pointers_and_refParamters/: README.md  build.py  main.cpp
Tut20_SLL/: .cproject  .project  CMakeLists.txt  README.md  Slist.h  main.cpp
Tut21_Stack/: .cproject  .project  CMakeLists.txt  README.md  Stack.h  main.cpp
Tut22_Qeue/: .cproject  .project  CMakeLists.txt  Node.h  Qeue.h  README.md  main.cpp
Tut23_DataStructure/: .cproject  .project  CMakeLists.txt  Node.h  Qeue.h  README.md  Slist.h  Stack.h  main.cpp
Tut24_istramIterator/: .cproject  .project  CMakeLists.txt  README.md  main.cpp
Tut25_VectorIterator/: .cproject  .project  CMakeLists.txt  README.md  main.cpp
Tut26_List/: .cproject  .project  CMakeLists.txt  README.md  main.cpp
Tut27_Set/: .cproject  .project  CMakeLists.txt  README.md  main.cpp
Tut28_Maps/: .cproject  .project  CMakeLists.txt  README.md  main.cpp
Tut29_DoublyLinkedList/: .project  CMakeLists.txt  Dlist.h  Node.h  README.md  Slist.h  main.cpp
Tut2_DefaultArguments_FunctionTemp/: .cproject  .project  CMakeLists.txt  README.md  build.py  main.cpp
Tut30_Tree/: .cproject  .project  CMakeLists.txt  README.md  TreeList.h  main.cpp
Tut31_SingleTon/: README.md  main.cpp
Tut31_SingleTone/: .cproject  .project  CMakeLists.txt  GlobalClassS.h  README.md  Singleton.h  main.cpp
Tut32_FactoryMethod/: .project  CMakeLists.txt  README.md  Widget.h  main.cpp
Tut33_FactoryMethodModified/: .cproject  .project  AbstractFactory.h  CMakeLists.txt  Client.h  Colour.h  OsFactory.h  README.md  Shape.h  Widget.h  main.cpp
Tut34_Prototype/: .cproject  .project  CMakeLists.txt  README.md  Widget.h  main.cpp  protoType.h
Tut35_Adapter/: AdvncedMediaPlayer.h  AudioPlayer.h  CMakeLists.txt  README.md  main.cpp
Tut35_Builder/: .cproject  .project  builder.h  main.cpp
Tut36_Adapter/: .cproject  .project  RectangleAdapter.h  main.cpp
Tut37_Bridge/: .cproject  .project  BridgeSwitch.h  CMakeLists.txt  IAppliance.h  README.md  main.cpp
Tut38_Decorator/: .cproject  .project  CMakeLists.txt  Decorator.h  README.md  Shape.h  ShapeDecorator.h  main.cpp
Tut39_Facade/: .cproject  .project  CMakeLists.txt  Facade.h  README.md  main.cpp
Tut3_ Calling constructor_destructor_return Ref/: .cproject  .project  CMakeLists.txt  README.md  TimeBase.cpp  main.cpp
Tut3_1_Vector/: .cproject  .project  CMakeLists.txt  README.md  main.cpp
Tut40_Flyweight/: .cproject  .project  CMakeLists.txt  FlyWeight.h  FlyweightFactory.h  README.md  Shape.h  ShapeFactory.h  main.cpp
Tut41_ChainOfRes/: .cproject  .project  CMakeLists.txt  ChainBase.h  ChainPattern.h  README.md  main.cpp
Tut42_Command/: .cproject  .project  CMakeLists.txt  Light.h  README.md  command.h  main.cpp
Tut43_Observer/: .cproject  .project  MyObserver.h  Observer.h  SubjectIbs.h  main.cpp
Tut43_ObserverDesign/: .cproject  .project  CMakeLists.txt  Observer.h  README.md  main.cpp
Tut44_Starategy/: .cproject  .project  CMakeLists.txt  README.md  Startegy.h  main.cpp
Tut45_CoffeeMachine/: Boiler.cpp  Boiler.h  CoffeeMachines.cpp  CoffeeMachines.h  Pot.cpp  Pot.h
Tut45_GrphOop/: .cproject  .project  Graph.h  main.cpp
Tut4_ConstObj_ConstMembers/: .cproject  .project  CMakeLists.txt  README.md  TimeBase.cpp  main.cpp
Tut5_Constref Vs ref/: .cproject  .project  CMakeLists.txt  Date.cpp  Date.h  README.md  main.cpp
Tut6_MemberInitializer/: .cproject  .project  CMakeLists.txt  Increment.cpp  README.md  main.cpp
Tut7_Compostion_oop/: .cproject  .project  CMakeLists.txt  Date.cpp  Date.h  Employee.cpp  Employee.h  README.md  main.cpp
Tut8_Cascaded member function Call_thisPointer/: .project  CMakeLists.txt  README.md  TimeBase.cpp  main.cpp
Tut9_static member/: .project  CMakeLists.txt  Employee.cpp  Employee.h  (+2 more)
(+436 files in other folders)
