cmake_minimum_required(VERSION 3.12)
project(cppCourse)
#set build type to debug

set (CMAKE_CXX_STANDARD 11) 
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(Basics/Tut1_pointers_and_refParamters)
add_subdirectory(Basics/Tut2_Const_ref_Vs_ref)
add_subdirectory(Basics/Tut3_DefaultArguments_FunctionTemp)
add_subdirectory(Basics/Tut4_CallingConstructorDestructor)
add_subdirectory(Basics/Tut5_ConstObj_ConstMembers)
add_subdirectory(Basics/Tut6_MemberInitializer)
add_subdirectory(Basics/Tut7_Compostion_oop)
add_subdirectory(Basics/Tut8_Cascaded_member_function_Call_thisPointer)
add_subdirectory(Basics/Tut9_static_member)
add_subdirectory(Basics/Tut20_namespace)
add_subdirectory(Basics/Tut10_Overloading_Stream_Insertion_and_Stream)
add_subdirectory(Basics/Tut11_math_overload)
add_subdirectory(Basics/Tut12_ArrayCalss_overloaded)
add_subdirectory(Basics/Tut13_Inheritance_Version1_Using_protected_data)





